# AnySpark

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLA.md  CLI_DIALOGUE_GUIDE.md  CONTRIBUTING.md  Dockerfile.backend  LICENSE  README.md  SECURITY.md  _build_now.ps1  docker-compose.build.yml  docker-compose.yml  install.ps1  install.sh  modules.yaml  novel.spec  pyproject.toml  requirements-dev.txt  requirements.txt  start.bat  start.ps1  start.sh
.github/: PULL_REQUEST_TEMPLATE.md
chapters/: 1782567755064.md  1782617643016.md  1784451459602.md  1784522736573.md  1784605307799.md  1784610012931.md
data/: events_1782614119979.jsonl
docs/: ARCHITECTURE.md  CLI_TEST_PLAN.md  EXTENDING.md  FRONTEND.md  GENRE_ARCH_DESIGN.md  GENRE_ESSENCE_ANALYSIS.md  IMPROVEMENTS.md  INDEX.md  MODULES.md  MULTI_GENRE_ROADMAP.md  README.md  ROADMAP.md  TECH_STACK.md  TESTING.md  使用说明书.md
frontend/: eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.js
plugins/: example_style.py
reviewers/: ai_flavor_sniffer.yaml  character_voice_expert.yaml  continuation_style_expert.yaml  default.yaml  foreshadow_auditor.yaml  zhipi_compliance.yaml
scripts/: analyze_metrics.py  check_firenze.py  check_results.py  dev-setup.ps1  generate_synthetic_metrics.py  reextract.py  rerun_pass2.py
skills/: default.yaml
src/: __init__.py  main.py  server.py
styles/: default.yaml
tests/: conftest.py  test_agent_loop.py  test_agent_tasks.py  test_agent_types.py  test_ai_flavor_scanner.py  test_anchor_resolver.py  test_autopilot.py  test_book_transform.py  test_chapter_dependency.py  test_chapter_result.py  test_character_agent.py  test_chat_routes.py  test_config.py  test_context_manager.py  test_continuation.py  test_cost_tracker.py  test_dedup.py  test_deep_style.py  test_edit_ops.py  (+33 more)
(+341 files in other folders)
