[project]
name = "novel-agent"
version = "2.6.0"
description = "AI 小说写作辅助 Agent"
license = "AGPL-3.0-or-later"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sse-starlette>=2.0",
    "python-multipart>=0.0.9",
    "python-docx>=1.0",  # docx 导出
    "rich>=13.0",  # CLI 美化输出
    "neo4j>=5.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "tiktoken>=0.7.0",
    "pygit2>=1.14",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
novel-cli = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B904",  # exception chaining (style preference, not a bug)
    "B023",  # loop variable binding in closures (common async pattern)
    "B007",  # unused loop variable (pervasive false positives)
    "B008",  # function call in argument defaults (false positive for FastAPI)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
